fix(header): header always visible

--- a/components/header/header.css
+++ b/components/header/header.css
@@ -1,6 +1,7 @@
 .app-header {
-    position: sticky;
+    position: fixed;
     top: 0;
+    left: 0;
     z-index: 1000;
     width: 100%;
     background-color: #ef4b43;
